# shop-app

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  render.yaml  ruff.toml
src/: manage.py
src/orders/: admin.py  models.py  services.py  urls.py  views.py
src/orders/api/: urls.py  views.py
src/orders/api/v1/: serializers.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py  0002_alter_order_total.py  0003_alter_order_total.py
src/orders/templates/: item_detail.html  order.html
src/shop_app/: asgi.py  settings.py  urls.py  wsgi.py
